# DigitalTwin-world

./: README.md  pyproject.toml  requirements.txt
companion_computer/detection/camera_detection/: yolo_detection.py
companion_computer/detection_and_track/camera_track/: yolo_track.py
companion_computer/detection_only/camera_detection/: yolo_detection.py
companion_computer/track/camera_track/: yolo_track.py
companion_computer/yolo_models/: __init__.py
ground_station/: target_status_client.py
kernel/: __init__.py  project_airsim_interface.py  scheduler.py
kernel/analysis/: timestamp_analysis.py
kernel/draft_other_schedulers/: scheduler_with_custom_trajectories.py
kernel/interceptor/: camera_publish.py  camera_publish_callback.py  main_uav_state.py  main_uav_state_server.py
kernel/other_uavs/: custom_trajectory_map_plot.py  target_drone_trajectory.py  target_drone_trajectory_PA_api.py  target_drone_trajectory_custom.py  trajectory_map_plot.py
sim_config/: robot_interceptor.jsonc  robot_target.jsonc  robot_target1.jsonc  robot_target1_fastPhys.jsonc  robot_target2.jsonc  robot_target2_fastPhys.jsonc  robot_target3.jsonc  scene_cesium_drone.jsonc  scene_for_drones.jsonc  scene_for_drones_with_fastPhys_models.jsonc
